Version 0.8.0:
code refactoring (sprite-related)
Fixed: will not crash if sound system is absent

Version 0.7.1:
Renamed binary to "epiphany-game"

Version 0.7.0:
Added frame skipping (command line: --frame-skip <int>)
Added loading of external levels (command line: --map <path>)
Frame limiter could be disabled (command line: --disable-frame-limiter)
Added XML configuration file
Added options menu;
Added sound and music volume change;
Added Music;
Changed menu screen;
Edited samples to match with music tune;
Fixed several memory leaks.

Version 0.6.1:
Fixed bug that prevented saving game progresses;
Small fixes in autotools configuration, now "make distcheck" works. 

Version 0.6.0:
Fixed "random exploding flintstone/monster" bug;
Code refactoring;
Added autotools support;
Removed ClanLib, now using libSDL;
Added 10 new (tutorial-)levels;

Version 0.5.1:
Fixed various bugs;

Version 0.5.0:
Added new levels (11-13);
Changed maps format: now a map is a script compiled on-the-fly;
Added entity Tomato;

Version 0.4.2:
Added Sample class;
Fixed "playing a sample several times" bug;
Several internal fixes;

Version 0.4.1:
Fixed segfault bug "no direction set";

Version 0.4.0:
Added class Menu;
Added Menu gfx;
General fixing and code cleaning;
Changed maps management;
added blue, green and yellow doors&keys;
changed level 0;
added time;
added spriteset (skins) support;
added sound support;
added a few samples;


Version 0.3.0:
fixed odd behaviours of flintstones;
fixed odd behaviours of entity_fallings;
fixed odd behaviours of entity_peperon;
changed doors functionality;
Added new level (level 7);
Added new level (level 8);
Added new level (level 9);
Added new level (level 10);
Changes affecting gameplay(Player cannot run away when he touches a monster);
Changed sprites for boulders;
Changed sprites for emeralds;
Changed sprites for sapphires;
Changed sprites for flintstones;
Changed sprites for exits;
Added new entity (Steel);
Added new entity (Wood);