@@ -29,6 +29,7 @@ Entity_Grass::Entity_Grass(Level* level, Uint32 x, Uint32 y)
 	m_sprite.init(surf_man->get_surface(Surface_Manager::SRF_GRASS));
 	m_state=ST_STOP;
 	m_sprite.set_state(SP_STOP);
+	m_sprite.start_animation();
 	m_exists=true;
 	
 		
