@@ -44,6 +44,7 @@ Entity_Player::Entity_Player(Level* level, Uint32 x, Uint32 y)
 	Surface_Manager* surf_man = Surface_Manager::instance();
 	m_sprite.init(surf_man->get_surface(Surface_Manager::SRF_PLAYER));
 	m_sprite.set_state(SP_STOP);
+	m_sprite.start_animation();
 	m_score=0;
 		
 	m_exists=true;
