@@ -21,10 +21,25 @@
 #include "screen.h"
 
 
+void Sprite::start_animation()
+{
+	m_is_animating=true;
+}
+
+void Sprite::stop_animation()
+{
+	m_is_animating=false;
+}
+
 void Sprite::init(Surface* surf)
 {
 
 	m_surface=surf;
+	
+	m_back_replacement= new Surface();
+	
+	m_back_replacement->init(SDL_CreateRGBSurface(SDL_HWSURFACE, k_sprite_size+8, k_sprite_size+8, Screen::instance()->get_bpp(),0,0,0,0),0,0);
+	
 	
 	m_pos.x=0;
 	
@@ -44,6 +59,10 @@ void Sprite::init(Surface* surf)
 	
 	m_total_frames = 8;
 	
+	m_is_changed=true;
+	
+	m_is_animating=true;
+	
 	
 }
 
@@ -52,7 +71,7 @@ void Sprite::init(Surface* surf)
 	
 Sprite::~Sprite()
 {
-	
+	delete m_back_replacement;
 	
 }
 
@@ -78,6 +97,7 @@ void Sprite::set_pos_x(Uint32 pos_x)
 {
 	m_pos.x=pos_x;
 	m_move_to_pos.x=pos_x;
+	m_is_changed=true;
 }
 
 
@@ -87,6 +107,7 @@ void Sprite::set_pos_y(Uint32 pos_y)
 {
 	m_pos.y=pos_y;
 	m_move_to_pos.y=pos_y;
+	m_is_changed=true;
 }
 
 
@@ -103,6 +124,7 @@ void Sprite::set_curr_frame(Uint32 frame)
 	{
 		m_curr_frame=frame;
 	}
+	m_is_changed=true;
 }
 
 
@@ -119,6 +141,11 @@ void Sprite::set_speed(Uint32 speed)
 void Sprite::move(Uint32 n_pixel)
 {
 	
+	if(n_pixel==0){
+		return;
+	}
+	
+	m_old_pos=m_pos;
 	n_pixel*=m_speed;
 	
 	if(m_pos.x<m_move_to_pos.x)
@@ -167,8 +194,8 @@ void Sprite::move(Uint32 n_pixel)
 		}
 	}
 
-
-
+	
+	
 }
 
 void Sprite::move()
@@ -177,6 +204,8 @@ void Sprite::move()
 	Sint32 n_pixel = k_sprite_size/m_total_frames;
 		
 	move(n_pixel);
+
+	
 
 }
 
@@ -189,39 +218,51 @@ Uint32 Sprite::get_frame_number() const
 
 void Sprite::set_state(Anim_State state)
 {
-	m_state=state;
+	//if(m_state!=state){
+		m_state=state;
+		m_is_changed=true;
+	//}
 }
 
 void Sprite::move_to_pos(Uint32 x, Uint32 y)
 {
 	m_move_to_pos.x=x;
 	m_move_to_pos.y=y;
+	m_is_changed=true;
 }
 
 
 void Sprite::move_to_pos_x(Uint32 x)
 {
 	m_move_to_pos.x=x;
+	m_is_changed=true;
 }
 
 void Sprite::move_to_pos_y(Uint32 y)
 {
 	m_move_to_pos.y=y;
+	m_is_changed=true;
 }
 
 
 void Sprite::update_frame()
 {
-	set_curr_frame(m_curr_frame+1);
+	if(m_is_animating==true){
+		set_curr_frame(m_curr_frame+1);
+		m_is_changed=true;
+	}
+
 }
 
 
 
 void Sprite::draw()
 {
-
-	this->put_screen(Screen::instance()->coord_to_screen(m_pos));
-
+	update_frame();
+	if(m_is_changed==true){
+		this->put_screen(Screen::instance()->coord_to_screen(m_pos));
+		m_is_changed=false;
+	}
 	
 }
 
@@ -235,9 +276,44 @@ void Sprite::set_position(WorldCoord pos)
 {
 	set_pos_x(pos.x);
 	set_pos_y(pos.y);
+	m_is_changed=true;
+}
+
+void Sprite::set_position_on_screen(ScreenCoord pos)
+{
+	WorldCoord wld = Screen::instance()->coord_to_world(pos);
+	set_pos_x(wld.x);
+	set_pos_y(wld.y);
+	m_is_changed=true;
 }
 	
 void Sprite::move_to_position(WorldCoord pos)
 {
 	move_to_pos(pos.x, pos.y);
+	m_is_changed=true;
 }
+
+void Sprite::clear_bg(){
+	if(m_is_changed==true){
+		Screen* screen = Screen::instance(); 
+		ScreenCoord screen_pos = screen->coord_to_screen(m_pos);
+		screen->clear(screen_pos.x-4,screen_pos.y-4,40,40);
+	}
+}
+
+void Sprite::update_bg(){
+	if(m_is_changed==true){
+		Screen* screen = Screen::instance(); 
+		ScreenCoord screen_pos = screen->coord_to_screen(m_pos);
+//		SDL_Rect src_rect;
+//		src_rect.x=0;
+//		src_rect.y=0;
+//		src_rect.w=k_sprite_size+8;
+//		src_rect.h=k_sprite_size+8;
+		screen_pos.x -= 4;
+		screen_pos.y -= 4;
+		m_back_replacement->put_screen(screen_pos,0);
+		//screen->blit_surface(m_back_replacement, src_rect, screen_pos);
+	}
+}
+
